-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.924 2011-04-04 02:06:53 jluis Exp $
-----------------------------------------------------------------------------------------

2011-04-04	jluis
	* gmt_init.c:		Apply a workaround to the test of  access to 'GMT_TMPDIR' that
				made the Win 64 bits version crash when that env variable was set.
				
2011-04-03	pwessel
	* grdfilter_func.c:	The -Nr option failed to set nodes to NaN.

2011-04-02	pwessel
	* gmtspatial_func.c:	Support via -N to report which polygon contains a
				given input feature.  Several modifiers controls how the
				polygon IDs are obtained and how we report the results.

2011-04-01	pwessel
	* gmt_support.c:	Now let GMT_inonout handle polygons with holes so the main
				code need not be concerned outer than skipping the holes.
	* gmtselect_func.c:	Now use GMT_inonout with no extra checks.
	* grdmask_func.c:	---"---
	* grdmath_func.c:	---"---
	* spotter/grdpmodeler_func.c:	---"---
	* spotter/grdrotater_func.c:	---"---
	* gmt.{c,txt}:		Renamed from upper case GMT.{c,txt}

2011-04-01	jluis
	* gmtapi_util.c:	First cut of functions to read images via GDAL and store them
	* gmt_grdio.[ch]	in the new IMAGE container. (Still very crude and probably buggy) 

2011-03-31	pwessel
	* ps2raster_func.c:	Added modifier +o<foldername> to generate a KML snipped in
				a named folder without the KML header and trailer.  Used to
				build multi-component KML files in association with gmt2kml.
	* gmt_io.c:		Let GMT_write_segmentheader deal with the segment marker so
				that internally we only have a clean header (or NULL).
				
2011-03-30	jluis
	* gmt_esri_io.c:	Also detects the Arc/Info float binary format (GRIDFLOAT)
	* grdimage_func.c:	Overzealous -C testing prevented the usage of an image via -Dr 

2011-03-29	pwessel
	* surface_func.c:	Improved gridding of pixel-registered grids by temporarily adding